libs/extractor/src/snapshots/extractor__tests__stylex_dynamic_keyframe_ref.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst fadeIn = stylex.keyframes({ from: { opacity: '0' }, to: { opacity: '1' } });\nconst styles = stylex.create({ base: (dur) => ({ animationName: fadeIn, animationDuration: dur }) });\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "animation-name",
                value: "KHdpcoq80gd1v1w6jq",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "animation-duration",
                level: 0,
                identifier: "dur",
                selector: None,
                style_order: None,
            },
        ),
        Keyframes(
            ExtractKeyframes {
                keyframes: {
                    "from": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: "0",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                    "to": [
                        ExtractStaticStyle {
                            property: "opacity",
                            value: "1",
                            level: 0,
                            selector: None,
                            style_order: None,
                            layer: None,
                        },
                    ],
                },
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst fadeIn = \"KHdpcoq80gd1v1w6jq\";\nconst styles = { \"base\": \"OHbr218bxhh4a98u89 OHdduvkap6xswg9ne8\" };\n",
}
