libs/extractor/src/snapshots/extractor__tests__stylex_dynamic_multi_param.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({\n  bar: (h, w) => ({\n    height: h,\n    width: w,\n  }),\n});\nconst result = stylex.props(styles.bar(myH, myW));\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "height",
                level: 0,
                identifier: "h",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "width",
                level: 0,
                identifier: "w",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst styles = { \"bar\": \"OHbcrg8pxergm1h4dm OHcnbm1jg6x_puqui3\" };\nconst result = {\n\tclassName: \"OHbcrg8pxergm1h4dm OHcnbm1jg6x_puqui3\",\n\tstyle: {\n\t\t\"---SUimport_sstylex_sfrom_s_x27__x40_stylexjs_lstylex_x27__x3b__xa_const_sstyles_s_x3d__sstylex_pcreate_o_x7b__xa__s_sbar_n_s_oh_m_sw_e_s_x3d__x3e__s_o_x7b__xa__s_s_s_sheight_n_sh_m_xa__s_s_s_swidth_n_sw_m_xa__s_s_x7d__e_m_xa__x7d__e_x3b__xa_const_sresult_s_x3d__sstylex_pprops_ostyles_pbar_omy_x48__m_smy_x57__e_e_x3b_-cb\": ((v) => typeof v === \"number\" ? v + \"px\" : v)(myH),\n\t\t\"---SUimport_sstylex_sfrom_s_x27__x40_stylexjs_lstylex_x27__x3b__xa_const_sstyles_s_x3d__sstylex_pcreate_o_x7b__xa__s_sbar_n_s_oh_m_sw_e_s_x3d__x3e__s_o_x7b__xa__s_s_s_sheight_n_sh_m_xa__s_s_s_swidth_n_sw_m_xa__s_s_x7d__e_m_xa__x7d__e_x3b__xa_const_sresult_s_x3d__sstylex_pprops_ostyles_pbar_omy_x48__m_smy_x57__e_e_x3b_-cp\": ((v) => typeof v === \"number\" ? v + \"px\" : v)(myW)\n\t}\n};\n",
}
