libs/extractor/src/snapshots/extractor__tests__stylex_dynamic_paren_non_object_body.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import stylex from '@stylexjs/stylex';\nconst styles = stylex.create({ base: (x) => (x) });\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import stylex from \"@stylexjs/stylex\";\nconst styles = { \"base\": \"\" };\n",
}
