libs/extractor/src/snapshots/extractor__tests__stylex_error_computed_key.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nlet key = 'color';\nconst styles = stylex.create({\n  base: {\n    [key]: 'red',\n  },\n});\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "import stylex from \"@stylexjs/stylex\";\nlet key = \"color\";\nconst styles = { \"base\": \"\" };\n",
}
